[project]
name = "hierarchyflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "easydict>=1.13",
    "numpy<2.0.0",
    "opencv-python>=4.11.0.86",
    "pyyaml>=6.0.2",
    "tensorboard>=2.19.0",
    "tensorboard-data-server>=0.7.2",
    "tensorboard-plugin-wit>=1.8.1",
    "tensorboardx>=2.6.2.2",
    "torch>=1.12.0",
    "torchvision>=0.13.0",
    "tqdm>=4.67.1",
]
